Introduce sector cache